Update swagger doku
